# RAG-Chatbot-Demo

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  environment.yml  pyproject.toml  setup.cfg
backend/: .dockerignore  Dockerfile  app.py  requirements.txt
backend/rag_app/: __init__.py  ingestion.py  rag.py  rag_core.py  routes.py
backend/rag_app/docs/: 90 Columbus Drive.txt  skyline tower.txt  urby harrison.txt
backend/rag_app/ingest/: chunking.py  document_loader.py
backend/rag_app/rag/: llm.py  prompts.py  retrieval.py
backend/rag_app/utils/: api_key.py  configs.py
backend/rag_app/vector_stores/: vector_store.py
docs/: 777 iconiq.txt  hendrix.txt  steelworks.txt  the wyldes.txt  water edge.txt
frontend/: Dockerfile  app.py
scripts/: install_pre-commit
