[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sandbox"
description = "AI sandbox for jamesxu0220"
authors = [
    { name = "James Xu", email = "zx2370@columbia.edu" },
]
requires-python = ">=3.12,<3.13"

[tool]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \__pycache__
  | \.pytest_cache
)/
'''
line-length = 88
target-version = ['py312']

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "def main",
    "__version__",
    "from",
    "import",
]
include_namespace_packages = true
omit = [
    "*/test*.py",
    "*/*_test.py",
    "*/conftest.py",
    "*/__init__.py",
]
show_missing = true
skip_covered = false

[tool.coverage.run]
branch = true
omit = [
    "*/test*.py",
    "*/*_test.py",
    "*/conftest.py",
    "*/__init__.py",
]
relative_files = true
source = []

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = [
    'rag_app',
]
line_length = 88
lines_between_sections = 1
multi_line_output = 3
profile = "black"
skip = []
skip_gitignore = true
src_paths = []
use_parentheses = true

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
no_implicit_optional = true

[tool.poetry]
package-mode = true
version = "0.1.0"
packages = [
    { include = "rag_app", from = "backend"},
]
requires-poetry = ">=2.1.1,<2.1.2"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
flask = "^3.1.0"
python-dotenv = "^1.1.0"
langchain = "^0.3.23"
openai = "^1.70.0"
faiss-cpu = "^1.10.0"
llama-index = "^0.12.28"
langchain-community = "^0.3.21"
langchain-openai = "^0.3.12"
langsmith = "^0.3.30"
streamlit = "^1.44.1"
requests = "^2.32.3"
types-requests = "^2.32.0.20250328"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
